# lingeling

./: .gitignore  CMakeLists.txt  ilingeling.c  lglbnr.c  lglcfg.h.in  lglcflags.h.in  lgldimacs.c  lglib.c  lglib.h  makefile.vs  mkcfg.py
